--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@terra-money/terra.js": "^3.0.1",
+    "@terra-money/wallet-provider": "^3.1.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.33.7",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
